clips: fix z-index for unsafe clip icon

--- a/src/Clips.css
+++ b/src/Clips.css
@@ -3,7 +3,7 @@
 	position: absolute;
 	bottom: 10px;
 	right: 30px;
-	z-index: 100;
+	z-index: 10;
 	font-size: 2em;
 	color: #ffd061;
 }
